--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "herolu-assignment",
+  "name": "herolo-assignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-content-loader": "^3.4.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
+    "react-transition-group": "^2.5.0",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://SasonBraha.github.io/herolo-cinema",
   "eslintConfig": {
     "extends": "react-app"
   },
