--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-select": "^2.1.2",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.1"
